<resources>
    <string name="app_name">Photo Trade Show</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Welcome_to">Welcome to</string>
    <string name="Event_Stall_Booking">Stall Booking and Managment</string>
    <string name="press_again_to_exit">Press again to exit</string>

    <string name="login">Login</string>
    <string name="Please_enter_below_details_to_login">Please enter below details to login</string>
    <string name="Business_Name">Business Name</string>
    <string name="Your_Name">Your Name</string>
    <string name="Mobile_Number">Mobile Number</string>
    <string name="password_not_match">Password not matched</string>

    <string name="Password">Password</string>
    <string name="Already_have_an_Account">Already have an Account?</string>
    <string name="Sign_in">Sign in</string>

    <string name="OTP_Verification">OTP Verification</string>
    <string name="we_sent_a_verification_code_to">we sent a verification code to </string>
    <string name="Verify_Now">Verify Now</string>
    <string name="Don_receive_the_OTP">Don\'t receive the OTP?</string>
    <string name="Resend">Resend</string>


    <string name="please_enter_your_old_password">Please Enter Your Old Password</string>
    <string name="please_enter_your_new_password">Please Enter Your New Password</string>
    <string name="please_enter_your_password">Please Enter Your Password</string>
    <string name="please_enter_your_confirm_password">Please Enter Your Confirm Password</string>
    <string name="please_enter_your_mobile_number">Please Enter Your Mobile Number</string>
    <string name="please_enter_your_valid_mobile_number">Please Enter Your Valid Mobile Number</string>
    <string name="please_enter_your_valid_email_address">Please Enter Your Valid Email Address</string>

    <string name="not_valid_mobile_number">Not Valid Mobile Number</string>
    <string name="Raisa_a_Issue">Raisa a Issue</string>

    <string name="Payments_History">Payments History</string>
    <string name="My_Profile">My Profile</string>
    <string name="My_Bookings">My Bookings</string>
    <string name="Messages">Messages</string>
    <string name="Notifications">Notifications</string>
    <string name="Change_Password">Change Password</string>
    <string name="logout">Logout</string>


    <string name="Upcoming_Events">Upcoming Events</string>

    <string name="BOOK_STALL">BOOK STALL</string>

    <string name="Past_Events">Past Events</string>


    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_password_desc">Enter your mobile number to update password</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="member_login">Member Login</string>
    <string name="login_desc">Please enter below details to login</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="password">Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_passwords">Forgot Password?</string>

    <string name="please_enter_your_otp">Please Enter Your OTP</string>
    <string name="wrong_otp">Wrong OTP</string>

</resources>