<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/login_background"
    tools:context=".activity.VerifyOTPActivity">


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/_20sdp"
      android:orientation="vertical">


    <ImageView
        android:layout_width="134dp"
        android:layout_height="179dp"
        android:layout_gravity="center"
        android:layout_margin="50dp"
        android:src="@drawable/ic_logo"/>

  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_margin="10dp"
      android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_24sdp"
        android:fontFamily="@font/kumbhsans_bold"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/OTP_Verification"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/priViewMobileID"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/_14sdp"
        android:fontFamily="@font/kumbhsans_regular"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:text="@string/we_sent_a_verification_code_to"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="00.00"/>





    <com.mukesh.OtpView
        android:id="@+id/otp_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:focusedByDefault="true"
        android:gravity="center"
        android:inputType="number"
        android:background="@color/white"
        android:textColor="@android:color/black"
        app:itemCount="4"
        app:lineColor="#848484"
        app:viewType="rectangle"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

    </LinearLayout>




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/idVerifyOtp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/Verify_Now"
        android:gravity="center"
        android:fontFamily="@font/kumbhsans_semibold"
        android:textColor="@color/white"
        android:background="#231F20"
        android:textSize="16sp" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal">



      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_14sdp"
          android:fontFamily="@font/kumbhsans_medium"
          android:textColor="@color/black"
          android:text="@string/Don_receive_the_OTP"/>


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="@dimen/_14sdp"
          android:fontFamily="@font/kumbhsans_medium"
          android:textColor="#FF0003"
          android:text="@string/Resend"/>


    </LinearLayout>





    <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:orientation="horizontal">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="14sp"
             android:textColor="@color/black"
             android:text="Don't have an account?"/>

         <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="14sp"
         android:textColor="#FF0003"
         android:text=" Register"/>-->

  </LinearLayout>

</LinearLayout>